k8s/overlays/dev/deployment-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kestra-webserver
  namespace: kestra
spec:
  template:
    spec:
      containers:
        - name: kestra
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
        - name: cloud-sql-proxy
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kestra-executor
  namespace: kestra
spec:
  template:
    spec:
      containers:
        - name: kestra
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
        - name: cloud-sql-proxy
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kestra-scheduler
  namespace: kestra
spec:
  template:
    spec:
      containers:
        - name: kestra
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
        - name: cloud-sql-proxy
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kestra-indexer
  namespace: kestra
spec:
  template:
    spec:
      containers:
        - name: kestra
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
        - name: cloud-sql-proxy
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
