k8s/overlays/dev/controller-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kestra-controller-grpc
  namespace: kestra
spec:
  loadBalancerIP: 0.0.0.0
