k8s/overlays/dev/postgres-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kestra-postgres-internal
  namespace: kestra
spec:
  loadBalancerIP: 10.0.0.10
