k8s/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kestra-webserver
  namespace: kestra
  annotations:
    cloud.google.com/backend-config: '{"default": "kestra-webserver"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
